force-app/main/default/objects/Outreach_Agreement__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name_Text__c</fullName>
        <description>Hidden field used for global search</description>
        <label>Account Name (Text)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Outreach Agreements</relationshipLabel>
        <relationshipName>Outreach_Agreements</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement_End_date__c</fullName>
        <label>Agreement End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Start_Date__c</fullName>
        <label>Agreement Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reminder_Date__c</fullName>
        <label>Reminder Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reminder_Date_is_Today__c</fullName>
        <formula>TODAY()  =  Reminder_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reminder Date is Today</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>In Draft</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Copyright Agreement</fullName>
                </value>
                <value>
                    <fullName>Liaison Agreement</fullName>
                </value>
                <value>
                    <fullName>License</fullName>
                </value>
                <value>
                    <fullName>MOC – Global</fullName>
                </value>
                <value>
                    <fullName>MOU-Global</fullName>
                </value>
                <value>
                    <fullName>MOU – Other</fullName>
                </value>
                <value>
                    <fullName>No-Bid Contract</fullName>
                </value>
                <value>
                    <fullName>Pilot Project</fullName>
                </value>
                <value>
                    <fullName>PSDO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Outreach Agreement</label>
    <listViews>
        <fullName>All_Agreements</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Agreement_Start_Date__c</columns>
        <columns>Agreement_End_date__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Agreements</label>
    </listViews>
    <nameField>
        <displayFormat>OA-{00000}</displayFormat>
        <label>Outreach Agreement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outreach Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>